# geowatch

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  example.env
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: api_router.py  example.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  disaster-map.js  helpline.js  index.js  recent-reports.js  styles.css
