[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ab1nv <abnvxsin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
pydantic = "^2.9.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
